--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "Node.JS",
   "version": "1.0.0",
   "dependencies": {
-    "joi": "^17.6.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0"
   }
 }
