--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "dotenv": "^16.0.1",
+    "email-templates": "^10.0.0",
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.0"
+    "mongoose": "^6.4.0",
+    "nodemailer": "^6.7.6",
+    "pug": "^3.0.2"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^6.4.4"
   }
 }
