--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "Node.JS",
   "version": "1.0.0",
+  "scripts": {
+    "start: dev": "MODE=dev nodemon app.js",
+    "start: prod": "MODE=prod node app.js"
+  },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
@@ -11,6 +15,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
     "nodemailer": "^6.7.6",
+    "nodemailer-express-handlebars": "^5.0.0",
+    "nodemon": "^2.0.19",
     "pug": "^3.0.2"
   },
   "devDependencies": {
