--- a/environments/.env-example
+++ b/environments/.env-example
@@ -2,6 +2,11 @@ PORT=
 MONGO_URL=
 ACCESS_TOKEN_SECRET=
 REFRESH_TOKEN_SECRET=
+ACTION_TOKEN_SECRET=
 
 NO_REPLY_EMAIL=
 NO_REPLY_EMAIL_PASSWORD=
+
+TWILIO_ACCOUNT_SSID=
+TWILIO_ACCESS_TOKEN=
+TWILIO_PHONE_NUMBER=
