--- a/environments/.env-example
+++ b/environments/.env-example
@@ -10,3 +10,8 @@ NO_REPLY_EMAIL_PASSWORD=
 TWILIO_ACCOUNT_SSID=
 TWILIO_ACCESS_TOKEN=
 TWILIO_PHONE_NUMBER=
+
+AWS_S3_BUCKET=
+AWS_S3_REGION=
+AWS_S3_ACCESS_KEY_ID=
+AWS_S3_SECRET_ACCESS_KEY=
