--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "start: prod": "MODE=prod node app.js"
   },
   "dependencies": {
+    "aws-sdk": "^2.1173.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "email-templates": "^10.0.0",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
@@ -18,9 +20,11 @@
     "nodemailer-express-handlebars": "^5.0.0",
     "nodemon": "^2.0.19",
     "pug": "^3.0.2",
-    "twilio": "^3.78.0"
+    "twilio": "^3.78.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/express-fileupload": "^1.2.2",
     "@types/nodemailer": "^6.4.4"
   }
 }
